--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="styles.5821813261a7dd8561a4.css"></head>
+<link rel="stylesheet" href="FrontCamp2019AngularModulePart23.github.io/dist/styles.5821813261a7dd8561a4.css"></head>
 <body>
   <app-root></app-root>
-<script src="dist/runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script>
-<script src="dist/runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script>
-<script src="dist/polyfills-es5.ef4b1e1fc703b3ff76e3.js" nomodule defer></script>
-<script src="dist/polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script>
-<script src="dist/main-es2015.3a690b7754b47ca822aa.js" type="module"></script>
-<script src="dist/main-es5.3a690b7754b47ca822aa.js" nomodule defer></script></body>
+<script src="FrontCamp2019AngularModulePart23.github.io/dist/runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script>
+<script src="FrontCamp2019AngularModulePart23.github.io/dist/runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script>
+<script src="FrontCamp2019AngularModulePart23.github.io/dist/polyfills-es5.ef4b1e1fc703b3ff76e3.js" nomodule defer></script>
+<script src="FrontCamp2019AngularModulePart23.github.io/dist/polyfills-es2015.2987770fde9daa1d8a2e.js" type="module"></script>
+<script src="FrontCamp2019AngularModulePart23.github.io/dist/main-es2015.3a690b7754b47ca822aa.js" type="module"></script>
+<script src="FrontCamp2019AngularModulePart23.github.io/dist/main-es5.3a690b7754b47ca822aa.js" nomodule defer></script></body>
 </html>
